src/main/java/com/logpoint/libquery/grammar/ExpressionParser.java
// $ANTLR 3.5.2 Expression.g 2018-02-06 23:05:34

	package com.logpoint.libquery.grammar;
	import java.util.LinkedList;
	import com.logpoint.libquery.expressions.arithmetic.*;
	import com.logpoint.libquery.expressions.*;
	import com.logpoint.libquery.exceptions.*;
	import java.util.HashMap;
    import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class ExpressionParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CALL", "CALLSIGNEDUNARY", "DIGIT", 
		"EQUALS", "FUNC", "ID", "SIGNEDUNARY", "WS", "'!='", "'%'", "'&&'", "'('", 
		"')'", "'*'", "'+'", "'-'", "'/'", "'<'", "'<='", "'='", "'=='", "'>'", 
		"'>='", "'^'", "'||'"
	};
	public static final int EOF=-1;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int CALL=4;
	public static final int CALLSIGNEDUNARY=5;
	public static final int DIGIT=6;
	public static final int EQUALS=7;
	public static final int FUNC=8;
	public static final int ID=9;
	public static final int SIGNEDUNARY=10;
	public static final int WS=11;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ExpressionParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ExpressionParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return ExpressionParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Expression.g"; }


	        Map<String, Object> row = new HashMap<String, Object>();

	        public void setRow(Map<String, Object> rowParam) {
	            row = rowParam;
	        }

	        public Map<String, Object> getRow() {
	            return row;
	        }

	        private List<String> errors = new LinkedList<String>();
	        public void displayRecognitionError(String[] tokenNames,
	                                        RecognitionException e) {
	            String hdr = getErrorHeader(e);
	            String msg = getErrorMessage(e, tokenNames);
	            errors.add(hdr + " " + msg);
	        }
	        public List<String> getErrors() {
	            return errors;
	        }
	        public void addErrorMessage(int line,int column,String message){
	            errors.add("line "+line+":"+column+" "+message);
	        }
	        


	public static class expression_return extends ParserRuleReturnScope {
		public Expression expression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expression"
	// Expression.g:72:1: expression returns [Expression expression] : ID '=' expr= expressions -> ^( EQUALS ID expressions ) ;
	public final ExpressionParser.expression_return expression() throws ParseException, RecognitionException {
		ExpressionParser.expression_return retval = new ExpressionParser.expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID1=null;
		Token char_literal2=null;
		ParserRuleReturnScope expr =null;

		CommonTree ID1_tree=null;
		CommonTree char_literal2_tree=null;
		RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_expressions=new RewriteRuleSubtreeStream(adaptor,"rule expressions");

		try {
			// Expression.g:73:2: ( ID '=' expr= expressions -> ^( EQUALS ID expressions ) )
			// Expression.g:73:6: ID '=' expr= expressions
			{
			ID1=(Token)match(input,ID,FOLLOW_ID_in_expression124);  
			stream_ID.add(ID1);

			char_literal2=(Token)match(input,23,FOLLOW_23_in_expression126);  
			stream_23.add(char_literal2);

			pushFollow(FOLLOW_expressions_in_expression132);
			expr=expressions();
			state._fsp--;

			stream_expressions.add(expr.getTree());
			retval.expression = (expr!=null?((ExpressionParser.expressions_return)expr).expression:null);
			// AST REWRITE
			// elements: expressions, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 73:66: -> ^( EQUALS ID expressions )
			{
				// Expression.g:73:69: ^( EQUALS ID expressions )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EQUALS, "EQUALS"), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				adaptor.addChild(root_1, stream_expressions.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expression"


	public static class expressions_return extends ParserRuleReturnScope {
		public Expression expression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "expressions"
	// Expression.g:76:1: expressions returns [Expression expression] : expr1= logicalExpression ;
	public final ExpressionParser.expressions_return expressions() throws RecognitionException {
		ExpressionParser.expressions_return retval = new ExpressionParser.expressions_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope expr1 =null;


		try {
			// Expression.g:77:5: (expr1= logicalExpression )
			// Expression.g:77:7: expr1= logicalExpression
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_logicalExpression_in_expressions169);
			expr1=logicalExpression();
			state._fsp--;

			adaptor.addChild(root_0, expr1.getTree());

			retval.expression = (expr1!=null?((ExpressionParser.logicalExpression_return)expr1).logicalExpression:null);
			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "expressions"


	public static class logicalExpression_return extends ParserRuleReturnScope {
		public LogicalExpression logicalExpression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "logicalExpression"
	// Expression.g:80:1: logicalExpression returns [LogicalExpression logicalExpression] : (expr1= relationalExpression ) ( ( '&&' | '||' ) ^ (expr2= relationalExpression ) )* ;
	public final ExpressionParser.logicalExpression_return logicalExpression() throws RecognitionException {
		ExpressionParser.logicalExpression_return retval = new ExpressionParser.logicalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal3=null;
		Token string_literal4=null;
		ParserRuleReturnScope expr1 =null;
		ParserRuleReturnScope expr2 =null;

		CommonTree string_literal3_tree=null;
		CommonTree string_literal4_tree=null;


			retval.logicalExpression = new LogicalExpression();
			List<Expression> expressions = new ArrayList<Expression>();

		try {
			// Expression.g:89:2: ( (expr1= relationalExpression ) ( ( '&&' | '||' ) ^ (expr2= relationalExpression ) )* )
			// Expression.g:89:6: (expr1= relationalExpression ) ( ( '&&' | '||' ) ^ (expr2= relationalExpression ) )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// Expression.g:89:6: (expr1= relationalExpression )
			// Expression.g:89:7: expr1= relationalExpression
			{
			pushFollow(FOLLOW_relationalExpression_in_logicalExpression207);
			expr1=relationalExpression();
			state._fsp--;

			adaptor.addChild(root_0, expr1.getTree());


							expressions.add((expr1!=null?((ExpressionParser.relationalExpression_return)expr1).relationalExpression:null));
					
			}

			// Expression.g:92:3: ( ( '&&' | '||' ) ^ (expr2= relationalExpression ) )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==14||LA2_0==28) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Expression.g:92:4: ( '&&' | '||' ) ^ (expr2= relationalExpression )
					{
					// Expression.g:92:4: ( '&&' | '||' )
					int alt1=2;
					int LA1_0 = input.LA(1);
					if ( (LA1_0==14) ) {
						alt1=1;
					}
					else if ( (LA1_0==28) ) {
						alt1=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 1, 0, input);
						throw nvae;
					}

					switch (alt1) {
						case 1 :
							// Expression.g:93:4: '&&'
							{
							string_literal3=(Token)match(input,14,FOLLOW_14_in_logicalExpression220); 
							string_literal3_tree = (CommonTree)adaptor.create(string_literal3);
							adaptor.addChild(root_0, string_literal3_tree);

							retval.logicalExpression.setOperator("&&");
							}
							break;
						case 2 :
							// Expression.g:94:4: '||'
							{
							string_literal4=(Token)match(input,28,FOLLOW_28_in_logicalExpression226); 
							string_literal4_tree = (CommonTree)adaptor.create(string_literal4);
							adaptor.addChild(root_0, string_literal4_tree);

							retval.logicalExpression.setOperator("||");
							}
							break;

					}

					// Expression.g:97:4: (expr2= relationalExpression )
					// Expression.g:97:5: expr2= relationalExpression
					{
					pushFollow(FOLLOW_relationalExpression_in_logicalExpression243);
					expr2=relationalExpression();
					state._fsp--;

					adaptor.addChild(root_0, expr2.getTree());


									expressions.add((expr2!=null?((ExpressionParser.relationalExpression_return)expr2).relationalExpression:null));
							
					}

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


				retval.logicalExpression.setExpressions(expressions);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "logicalExpression"


	public static class relationalExpression_return extends ParserRuleReturnScope {
		public RelationalExpression relationalExpression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "relationalExpression"
	// Expression.g:103:1: relationalExpression returns [RelationalExpression relationalExpression] : (expr1= arithmeticExpression ) ( (| '==' | '!=' | '>' | '<' | '<=' | '>=' ) ^ (expr2= arithmeticExpression ) )* ;
	public final ExpressionParser.relationalExpression_return relationalExpression() throws RecognitionException {
		ExpressionParser.relationalExpression_return retval = new ExpressionParser.relationalExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal5=null;
		Token string_literal6=null;
		Token char_literal7=null;
		Token char_literal8=null;
		Token string_literal9=null;
		Token string_literal10=null;
		ParserRuleReturnScope expr1 =null;
		ParserRuleReturnScope expr2 =null;

		CommonTree string_literal5_tree=null;
		CommonTree string_literal6_tree=null;
		CommonTree char_literal7_tree=null;
		CommonTree char_literal8_tree=null;
		CommonTree string_literal9_tree=null;
		CommonTree string_literal10_tree=null;


			retval.relationalExpression = new RelationalExpression();
			List<Expression> expressions = new ArrayList<Expression>();

		try {
			// Expression.g:112:2: ( (expr1= arithmeticExpression ) ( (| '==' | '!=' | '>' | '<' | '<=' | '>=' ) ^ (expr2= arithmeticExpression ) )* )
			// Expression.g:112:6: (expr1= arithmeticExpression ) ( (| '==' | '!=' | '>' | '<' | '<=' | '>=' ) ^ (expr2= arithmeticExpression ) )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// Expression.g:112:6: (expr1= arithmeticExpression )
			// Expression.g:112:7: expr1= arithmeticExpression
			{
			pushFollow(FOLLOW_arithmeticExpression_in_relationalExpression287);
			expr1=arithmeticExpression();
			state._fsp--;

			adaptor.addChild(root_0, expr1.getTree());


							expressions.add((expr1!=null?((ExpressionParser.arithmeticExpression_return)expr1).arithmeticExpression:null));
					
			}

			// Expression.g:115:3: ( (| '==' | '!=' | '>' | '<' | '<=' | '>=' ) ^ (expr2= arithmeticExpression ) )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==DIGIT||LA4_0==ID||LA4_0==12||LA4_0==15||(LA4_0 >= 18 && LA4_0 <= 19)||(LA4_0 >= 21 && LA4_0 <= 22)||(LA4_0 >= 24 && LA4_0 <= 26)) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// Expression.g:115:4: (| '==' | '!=' | '>' | '<' | '<=' | '>=' ) ^ (expr2= arithmeticExpression )
					{
					// Expression.g:115:4: (| '==' | '!=' | '>' | '<' | '<=' | '>=' )
					int alt3=7;
					switch ( input.LA(1) ) {
					case DIGIT:
					case ID:
					case 15:
					case 18:
					case 19:
						{
						alt3=1;
						}
						break;
					case 24:
						{
						alt3=2;
						}
						break;
					case 12:
						{
						alt3=3;
						}
						break;
					case 25:
						{
						alt3=4;
						}
						break;
					case 21:
						{
						alt3=5;
						}
						break;
					case 22:
						{
						alt3=6;
						}
						break;
					case 26:
						{
						alt3=7;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 3, 0, input);
						throw nvae;
					}
					switch (alt3) {
						case 1 :
							// Expression.g:116:3: 
							{
							}
							break;
						case 2 :
							// Expression.g:116:4: '=='
							{
							string_literal5=(Token)match(input,24,FOLLOW_24_in_relationalExpression300); 
							string_literal5_tree = (CommonTree)adaptor.create(string_literal5);
							adaptor.addChild(root_0, string_literal5_tree);

							retval.relationalExpression.setOperator("==");
							}
							break;
						case 3 :
							// Expression.g:117:4: '!='
							{
							string_literal6=(Token)match(input,12,FOLLOW_12_in_relationalExpression306); 
							string_literal6_tree = (CommonTree)adaptor.create(string_literal6);
							adaptor.addChild(root_0, string_literal6_tree);

							retval.relationalExpression.setOperator("!=");
							}
							break;
						case 4 :
							// Expression.g:118:4: '>'
							{
							char_literal7=(Token)match(input,25,FOLLOW_25_in_relationalExpression312); 
							char_literal7_tree = (CommonTree)adaptor.create(char_literal7);
							adaptor.addChild(root_0, char_literal7_tree);

							retval.relationalExpression.setOperator(">");
							}
							break;
						case 5 :
							// Expression.g:119:4: '<'
							{
							char_literal8=(Token)match(input,21,FOLLOW_21_in_relationalExpression318); 
							char_literal8_tree = (CommonTree)adaptor.create(char_literal8);
							adaptor.addChild(root_0, char_literal8_tree);

							retval.relationalExpression.setOperator("<");
							}
							break;
						case 6 :
							// Expression.g:120:4: '<='
							{
							string_literal9=(Token)match(input,22,FOLLOW_22_in_relationalExpression324); 
							string_literal9_tree = (CommonTree)adaptor.create(string_literal9);
							adaptor.addChild(root_0, string_literal9_tree);

							retval.relationalExpression.setOperator("<=");
							}
							break;
						case 7 :
							// Expression.g:121:4: '>='
							{
							string_literal10=(Token)match(input,26,FOLLOW_26_in_relationalExpression330); 
							string_literal10_tree = (CommonTree)adaptor.create(string_literal10);
							adaptor.addChild(root_0, string_literal10_tree);

							retval.relationalExpression.setOperator(">=");
							}
							break;

					}

					// Expression.g:123:4: (expr2= arithmeticExpression )
					// Expression.g:123:5: expr2= arithmeticExpression
					{
					pushFollow(FOLLOW_arithmeticExpression_in_relationalExpression346);
					expr2=arithmeticExpression();
					state._fsp--;

					adaptor.addChild(root_0, expr2.getTree());


									expressions.add((expr2!=null?((ExpressionParser.arithmeticExpression_return)expr2).arithmeticExpression:null));
							
					}

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


				retval.relationalExpression.setExpressions(expressions);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "relationalExpression"


	public static class arithmeticExpression_return extends ParserRuleReturnScope {
		public ArithmeticExpression arithmeticExpression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "arithmeticExpression"
	// Expression.g:129:1: arithmeticExpression returns [ArithmeticExpression arithmeticExpression] : (expr1= atom ) ( ( '+' | '-' | '/' | '*' | '%' | '^' ) ^ (expr2= atom ) )* ;
	public final ExpressionParser.arithmeticExpression_return arithmeticExpression() throws RecognitionException {
		ExpressionParser.arithmeticExpression_return retval = new ExpressionParser.arithmeticExpression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal11=null;
		Token char_literal12=null;
		Token char_literal13=null;
		Token char_literal14=null;
		Token char_literal15=null;
		Token char_literal16=null;
		ParserRuleReturnScope expr1 =null;
		ParserRuleReturnScope expr2 =null;

		CommonTree char_literal11_tree=null;
		CommonTree char_literal12_tree=null;
		CommonTree char_literal13_tree=null;
		CommonTree char_literal14_tree=null;
		CommonTree char_literal15_tree=null;
		CommonTree char_literal16_tree=null;


			retval.arithmeticExpression = new ArithmeticExpression();
			List<Expression> expressions = new ArrayList<Expression>();

		try {
			// Expression.g:138:2: ( (expr1= atom ) ( ( '+' | '-' | '/' | '*' | '%' | '^' ) ^ (expr2= atom ) )* )
			// Expression.g:138:6: (expr1= atom ) ( ( '+' | '-' | '/' | '*' | '%' | '^' ) ^ (expr2= atom ) )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// Expression.g:138:6: (expr1= atom )
			// Expression.g:138:7: expr1= atom
			{
			pushFollow(FOLLOW_atom_in_arithmeticExpression390);
			expr1=atom();
			state._fsp--;

			adaptor.addChild(root_0, expr1.getTree());


							expressions.add((expr1!=null?((ExpressionParser.atom_return)expr1).expression:null));
					
			}

			// Expression.g:141:3: ( ( '+' | '-' | '/' | '*' | '%' | '^' ) ^ (expr2= atom ) )*
			loop6:
			while (true) {
				int alt6=2;
				switch ( input.LA(1) ) {
				case 19:
					{
					int LA6_2 = input.LA(2);
					if ( (LA6_2==DIGIT||LA6_2==ID||LA6_2==15||(LA6_2 >= 18 && LA6_2 <= 19)) ) {
						alt6=1;
					}

					}
					break;
				case 18:
					{
					int LA6_3 = input.LA(2);
					if ( (LA6_3==DIGIT||LA6_3==ID||LA6_3==15||(LA6_3 >= 18 && LA6_3 <= 19)) ) {
						alt6=1;
					}

					}
					break;
				case 13:
				case 17:
				case 20:
				case 27:
					{
					alt6=1;
					}
					break;
				}
				switch (alt6) {
				case 1 :
					// Expression.g:141:4: ( '+' | '-' | '/' | '*' | '%' | '^' ) ^ (expr2= atom )
					{
					// Expression.g:141:4: ( '+' | '-' | '/' | '*' | '%' | '^' )
					int alt5=6;
					switch ( input.LA(1) ) {
					case 18:
						{
						alt5=1;
						}
						break;
					case 19:
						{
						alt5=2;
						}
						break;
					case 20:
						{
						alt5=3;
						}
						break;
					case 17:
						{
						alt5=4;
						}
						break;
					case 13:
						{
						alt5=5;
						}
						break;
					case 27:
						{
						alt5=6;
						}
						break;
					default:
						NoViableAltException nvae =
							new NoViableAltException("", 5, 0, input);
						throw nvae;
					}
					switch (alt5) {
						case 1 :
							// Expression.g:142:3: '+'
							{
							char_literal11=(Token)match(input,18,FOLLOW_18_in_arithmeticExpression402); 
							char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
							adaptor.addChild(root_0, char_literal11_tree);

							retval.arithmeticExpression.setOperator("+");
							}
							break;
						case 2 :
							// Expression.g:143:4: '-'
							{
							char_literal12=(Token)match(input,19,FOLLOW_19_in_arithmeticExpression409); 
							char_literal12_tree = (CommonTree)adaptor.create(char_literal12);
							adaptor.addChild(root_0, char_literal12_tree);

							retval.arithmeticExpression.setOperator("-");
							}
							break;
						case 3 :
							// Expression.g:144:4: '/'
							{
							char_literal13=(Token)match(input,20,FOLLOW_20_in_arithmeticExpression415); 
							char_literal13_tree = (CommonTree)adaptor.create(char_literal13);
							adaptor.addChild(root_0, char_literal13_tree);

							retval.arithmeticExpression.setOperator("/");
							}
							break;
						case 4 :
							// Expression.g:145:4: '*'
							{
							char_literal14=(Token)match(input,17,FOLLOW_17_in_arithmeticExpression421); 
							char_literal14_tree = (CommonTree)adaptor.create(char_literal14);
							adaptor.addChild(root_0, char_literal14_tree);

							retval.arithmeticExpression.setOperator("*");
							}
							break;
						case 5 :
							// Expression.g:146:4: '%'
							{
							char_literal15=(Token)match(input,13,FOLLOW_13_in_arithmeticExpression427); 
							char_literal15_tree = (CommonTree)adaptor.create(char_literal15);
							adaptor.addChild(root_0, char_literal15_tree);

							retval.arithmeticExpression.setOperator("%");
							}
							break;
						case 6 :
							// Expression.g:147:4: '^'
							{
							char_literal16=(Token)match(input,27,FOLLOW_27_in_arithmeticExpression433); 
							char_literal16_tree = (CommonTree)adaptor.create(char_literal16);
							adaptor.addChild(root_0, char_literal16_tree);

							retval.arithmeticExpression.setOperator("^");
							}
							break;

					}

					// Expression.g:150:4: (expr2= atom )
					// Expression.g:150:5: expr2= atom
					{
					pushFollow(FOLLOW_atom_in_arithmeticExpression450);
					expr2=atom();
					state._fsp--;

					adaptor.addChild(root_0, expr2.getTree());


									expressions.add((expr2!=null?((ExpressionParser.atom_return)expr2).expression:null));
							
					}

					}
					break;

				default :
					break loop6;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


				retval.arithmeticExpression.setExpressions(expressions);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "arithmeticExpression"


	public static class atom_return extends ParserRuleReturnScope {
		public Expression expression;
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "atom"
	// Expression.g:156:1: atom returns [Expression expression] : (atomicExpr= atomicExpression |number1= signedUnaryExpression | '(' expr= expressions ')' );
	public final ExpressionParser.atom_return atom() throws RecognitionException {
		ExpressionParser.atom_return retval = new ExpressionParser.atom_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal17=null;
		Token char_literal18=null;
		ParserRuleReturnScope atomicExpr =null;
		ParserRuleReturnScope number1 =null;
		ParserRuleReturnScope expr =null;

		CommonTree char_literal17_tree=null;
		CommonTree char_literal18_tree=null;

		try {
			// Expression.g:157:3: (atomicExpr= atomicExpression |number1= signedUnaryExpression | '(' expr= expressions ')' )
			int alt7=3;
			switch ( input.LA(1) ) {
			case DIGIT:
			case ID:
				{
				alt7=1;
				}
				break;
			case 18:
			case 19:
				{
				alt7=2;
				}
				break;
			case 15:
				{
				alt7=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}
			switch (alt7) {
				case 1 :
					// Expression.g:157:5: atomicExpr= atomicExpression
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_atomicExpression_in_atom485);
					atomicExpr=atomicExpression();
					state._fsp--;

					adaptor.addChild(root_0, atomicExpr.getTree());

					retval.expression = (atomicExpr!=null?((ExpressionParser.atomicExpression_return)atomicExpr).atomicExpression:null);
					}
					break;
				case 2 :
					// Expression.g:158:5: number1= signedUnaryExpression
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_signedUnaryExpression_in_atom497);
					number1=signedUnaryExpression();
					state._fsp--;

					adaptor.addChild(root_0, number1.getTree());
